src/objects/LBI__ModelStage__c.object
<CustomObject>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Model Stages</relationshipLabel>
        <relationshipName>LatticeModelStages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeModelID__c</fullName>
        <externalId>true</externalId>
        <label>Lattice Model ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ModelName__c</fullName>
        <label>Model Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ProcessingStatus__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Processed - Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Lattice Model Stage</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__ModelName__c</columns>
        <columns>LBI__LatticeModelID__c</columns>
        <columns>LBI__Type__c</columns>
        <columns>LBI__LatticeApplicationRegion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LMS-{000000000}</displayFormat>
        <label>Lattice Model Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Model Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>